--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gascooler Selection Form 3 </title>
+    <title>Gascooler Selection Form 4 </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <style>
@@ -26,15 +26,15 @@
             <h1 class="text-2xl font-bold mb-6 text-center">Gascooler Selection</h1>
             <form id="gascoolerForm">
                 <div class="grid grid-cols-2 gap-4 mb-4">
-                    <input type="text"  name="nomeCommessa" placeholder="Nome commessa" class="border p-2 rounded" />
-                    <input type="text" name="nomeCommessa"  placeholder="Numero Commessa" class="border p-2 rounded" />
-                    <input type="text"  name="nomeCommessa" placeholder="Year" class="border p-2 rounded" />
-                    <input type="text"  name="nomeCommessa" placeholder="Delivered in ...." class="border p-2 rounded" />
-                    <input type="text"  name="nomeCommessa" placeholder="Code" class="border p-2 rounded" />
-                    <input type="text"  name="nomeCommessa" placeholder="Quantity" class="border p-2 rounded" />
+                    <input type="text"   placeholder="Nome commessa" class="border p-2 rounded" />
+                    <input type="text"   placeholder="Numero Commessa" class="border p-2 rounded" />
+                    <input type="text"   placeholder="Year" class="border p-2 rounded" />
+                    <input type="text"   placeholder="Delivered in ...." class="border p-2 rounded" />
+                    <input type="text"  placeholder="Code" class="border p-2 rounded" />
+                    <input type="text"   placeholder="Quantity" class="border p-2 rounded" />
                 </div>
                 <div class="mb-4">
-                    <label for="deliveryDate"   class="block mb-2">Delivered for the day:</label>
+                    <label for="deliveryDate"  class="block mb-2">Delivered for the day:</label>
                     <input type="date" id="deliveryDate" class="border p-2 rounded w-full" />
                 </div>
                 <div class="mb-4">
