--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
         .custom-text-input input[type="text"]::placeholder {
             color: white;
         }
+        
+        /* Aggiunto margine inferiore ai titoli delle sezioni */
+        .custom-radio p {
+            margin-bottom: 1rem;
+        }
+        
     </style>
 </head>
 <body>
