--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         /* Aggiunto margine inferiore ai titoli delle sezioni */
         .custom-radio p {
             margin-bottom: 1rem;
+            margin-top: 2rem;
         }
         
     </style>
