--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="grid grid-cols-3 gap-4">
       <div class="col-span-3 row-span-4">
-        <img src="https://github.com/your-repo/1.jpeg" alt="Project Image" class="w-full h-full object-cover">
+        <img src="https://alessenex.github.io/Ordine_Gascoolers/1.jpeg" alt="Project Image" class="w-full h-full object-cover">
       </div>
       <div class="col-span-3 row-span-1">
         <a href="/research" class="hover:underline">cliccando qui, si apre la pagina relativa alla ricerca</a>
