--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gascooler Selection Form 2</title>
+    <title>Gascooler Selection Form </title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.9/dist/flatpickr.min.css">
@@ -205,14 +205,14 @@
     this.style.color = 'black'; // Cambia il colore del testo a nero
 
         // Ottenere la data dal campo di input
-        //const deliveryDateInput = document.getElementById('deliveryDate');
-        //const rawDate = deliveryDateInput.value;
+        const deliveryDateInput = document.getElementById('deliveryDate');
+        const rawDate = deliveryDateInput.value;
 
         // Convertire la data nel formato desiderato
-        //const formattedDate = formatItalianDate(rawDate);
+        const formattedDate = formatItalianDate(rawDate);
 
         // Aggiornare il valore della data nel formProps
-        //formProps.deliveryDate = formattedDate;
+        formProps.deliveryDate = formattedDate;
     
     });
     
