--- a/index.html
+++ b/index.html
@@ -161,7 +161,9 @@
                             <div class="custom-text-input hidden" id="otherTreatmentInput">  
                                 <input type="text" name="otherTreatmentText" placeholder="Specify other treatment">
                             </div>
-                            <input type="radio" id="otherRal" name="Ral" value="Other">
+
+                            <p> RAL </p>
+                            <input type="radio" id="otherRal" name="ral" value="Other">
                             <label for="otherRal">Other...</label>
                             <div class="custom-text-input hidden" id="otherRal">  
                                 <input type="text" name="otherRalText" placeholder="Specify other Ral">
